# CHANGELOG
# ---
# * Fix PaypalExpressGateway#purchase to have the same method signature as other gateways [cody]
#
# * Cargo cult off the rails unique id generator instead of UUID library [cody]
#
# * Add uuid-1.0.3 for generating random request UUIDs [cody]
#
# * Remove mock_methods and http mock from the library [cody]
#
# * PaypalExpress cannot setup a payment for 0 dollars.  If the amount is zero then setup a payment for $1. [cody]
#
# * Small changes to PslCard gateway [cody]
#
# * Fix Money dependency with PslCard gateway [cody]
#
# * Add PslCard payment gateway [MoneySpyder http://moneyspyder.co.uk]
#
# * Scrub the card number, expiry, and CVV code from the response [cody]
#
# * Use test? query for checking test mode [cody]
#
# * Add support for the E-xact Payment Gateway [James Edward Gray II, cody]
#
# * Fix partially broken method of dealing with phone numbers in the PayPal Helper [cody]
#
# * Update remote tests for PaymentExpress [cody]
#
# * Add Content-Type header to PaymentExpress post [cody]
#
# * Use DECLINED as the message for declined transactions in the PaymentExpress remote tests [cody]
#
# * Add JCB as a supported card type for the PaymentExpressGateway [cody]
#
# * Rename DpsGateway to PaymentExpressGateway [cody]
#
# * Add DPS Payment Express gateway (NZ) [dgjones, cody]
#
# * Remove duplicate and incorrect expdate method from Authorize.net [cody]
#
# * Allow authorization and purchase using a billing_id retrieved from TrustCommerce citadel [jesse.c.scott]
#
# * Don't return a frozen string from CreditCard.type? [cody]
#
# * Update remote Psigate test to ensure using a verification value doesn't break anything [cody]
#
# * Update remote Moneris test to ensure using a verification value doesn't break anything [cody]
#
# * Fix Solo issue number with CardStream gateway and improve test coverage [cody]
#
# * Add CardStream gateway [Jonah Fox, Thomas Nichols, cody]
#
# * Verify Peer in PayPal notifications and add account method [cody]
# 