@@ -43,7 +43,7 @@ module ActiveMerchant #:nodoc:
         def parse(post)
           @raw = post.to_s
           for line in @raw.split('&')    
-            key, value = *line.scan( %r{^(\w+)\=(.*)$} ).flatten
+            key, value = *line.scan( %r{^([A-Za-z0-9_.]+)\=(.*)$} ).flatten
             params[key] = CGI.unescape(value)
           end
         end
