@@ -1,5 +1,7 @@
 # CHANGELOG
 # ---
+# * Allow notification name / value pairs to have a . in the name like checkout.x = 400 [cody]
+#
 # * Fix PaypalExpressGateway#purchase to have the same method signature as other gateways [cody]
 #
 # * Cargo cult off the rails unique id generator instead of UUID library [cody]
